Rename library and project. Switch unrecognized filename extensions.
- Renamed library folder from "Libraries (2025-08-30)" to "Libraries (2025-09-04)".
- Renamed project file from "Framework Demonstration (v1, 2025-09-02).ahk" to "Framework Demonstration (v1, 2025-09-04).ahk".
- Renamed script file from "Framework Demonstration (v1, 2025-09-02).txt" to "Framework Demonstration (v1, 2025-09-04).vba".
- Renamed SQL file from "Locations (v1, 2025-09-02).sql" to "Locations (v1, 2025-09-04).sql".
- Renamed SQL file from "Unit Measure (v1, 2025-09-02).sql" to "Unit Measure (v1, 2025-09-04).sql".
- Switched all VBA source files from .txt to .vba for linguist recognition.
- Modified .gitattributes to disable Git text normalization and recognize T-SQL.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Prevents modifying newlines when committing files, preserving their hash value.
+* -text
 
-# Treat all .txt files in Framework Demonstration and Spreadsheet Operations Template as VBA (Visual Basic for Applications)
-Projects/Framework[[:space:]]Demonstration/*.txt linguist-language=VBA
-Shared/Spreadsheet[[:space:]]Operations[[:space:]]Template/*.txt linguist-language=VBA
+# https://github.com/github-linguist/linguist/blob/main/lib/linguist/languages.yml
+
+# GitHub Linguist - force T-SQL for .sql files in Projects\Framework Demonstration.
+Projects/Framework[[:space:]]Demonstration/*.sql linguist-language=TSQL
